<resources>
    <string name="app_name">OpenSourceProject</string>
    <string name="apple_price">1000</string>
    <string name="mandarin_price">1a</string>
    <string name="avocado_price">10a</string>
    <string name="shovel_price">5000</string>
    <string name="watering_price">1500</string>
    <string name="brick_house_price">100a</string>
    <string name="final_house_price">1b</string>
    <string name="apple_up">5000</string>
    <string name="mandarin_up">5a</string>
    <string name="avocado_up">50a</string>
    <string name="step_up">Grow</string>
</resources>