<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/coin" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/tv_round"
        android:gravity="end" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="120dp"
        android:columnCount="1"
        android:rowCount="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_3"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_4"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_5"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_6"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_7"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_8"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/not_cultivate" />

                <ProgressBar
                    android:id="@+id/pb_9"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:progressDrawable="@drawable/progressbar_style"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bottom"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/iv_apple"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:src="@drawable/apple" />

            <ImageView
                android:id="@+id/iv_mandarin"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:src="@drawable/mandarin" />

            <ImageView
                android:id="@+id/iv_avocado"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:src="@drawable/avocado" />

            <ImageView
                android:id="@+id/iv_shovel"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:src="@drawable/shovel2" />

            <ImageView
                android:id="@+id/iv_speed_up"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:src="@drawable/speed_up" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_round"
            android:gravity="center"
            android:text="@string/apple_price"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tv_round"
            android:gravity="center"
            android:text="@string/mandarin_price"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tv_round"
            android:gravity="center"
            android:text="@string/avocado_price"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tv_round"
            android:gravity="center"
            android:text="@string/shovel_price"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tv_round"
            android:gravity="center"
            android:text="@string/watering_price"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/fruit_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_round"
        android:scaleType="centerCrop"
        android:src="@drawable/up_arrow" />

    <TextView
        android:id="@+id/tv_step_up"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/tv_round"
        android:gravity="center"
        android:text="@string/step_up"
        android:textSize="11dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ib_apple"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_round"
        android:scaleType="centerCrop"
        android:src="@drawable/apple" />

    <TextView
        android:id="@+id/tv_apple_up"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/tv_round"
        android:gravity="center"
        android:text="@string/apple_up"
        android:textSize="10dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ib_mandarin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_round"
        android:scaleType="centerCrop"
        android:src="@drawable/mandarin" />

    <TextView
        android:id="@+id/tv_mandarin_up"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/tv_round"
        android:gravity="center"
        android:text="@string/mandarin_up"
        android:textSize="10dp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ib_avocado"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_round"
        android:scaleType="centerCrop"
        android:src="@drawable/avocado" />

    <TextView
        android:id="@+id/tv_avocado_up"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/tv_round"
        android:gravity="center"
        android:text="@string/avocado_up"
        android:textSize="10dp"
        android:textStyle="bold" />

</FrameLayout>

